team-app/main/default/objects/Pipeline_Review_Progress__e/Pipeline_Review_Progress__e.object-meta.xml
<CustomObject>
    <description>Live progress for a manual Pipeline Review run the user launched. Subscribe with empApi. Do not poll.</description>
    <label>Pipeline Review Progress</label>
    <pluralLabel>Pipeline Review Progress</pluralLabel>
</CustomObject>