team-app/main/default/objects/Pipeline_Review_Progress__e/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <description>Progress numerator.</description>
    <inlineHelpText>Succeeded so far.</inlineHelpText>
    <label>Completed</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>