team-app/main/default/objects/Pipeline_Review_Progress__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>User-visible status line.</description>
    <inlineHelpText>Skip count or failure banner text.</inlineHelpText>
    <label>Message</label>
    <type>Text</type>
    <length>255</length>
</CustomField>