team-app/main/default/objects/Pipeline_Review_Progress__e/fields/Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Run_Id__c</fullName>
    <description>Run being reported.</description>
    <inlineHelpText>Pipeline_Review_Run__c Id.</inlineHelpText>
    <label>Run Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>