team-app/main/default/objects/Pipeline_Review_Progress__e/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Progress denominator.</description>
    <inlineHelpText>Items in the run.</inlineHelpText>
    <label>Total</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>